load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "state_command",
    hdrs = ["state_command.hpp"],
    deps = [
        "@opencv//:opencv",
        "@eigen//:eigen3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "idle_state",
    hdrs = ["idle_state.hpp"],
    deps = [
        ":state_command",
        "@opencv//:opencv",
        "@open3d//:open3d",
    ],
    visibility = ["//visibility:public"],
)