package(default_visibility = ["//visibility:public"])

# Main executable
cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":idle_state",
        ":tracking_state",
        "//include:state_command",
    ],
    copts = [
        "-std=c++17",
        "-O3",
        "-Wall",
        "-Wextra",
    ],
    linkopts = [
        "-lpthread",
    ],
    data = [
        "//src/models:dpt_swin2_tiny_256_torchscript",
        ":calib_2.yaml",
        "//src/models:FastSAM-x",
        "//src/models:FastSAM-s",
    ],
)

cc_library(
    name = "idle_state",
    srcs = ["idle_state.cpp"],
    hdrs = ["//include:idle_state"],
    deps = [
        "//include:idle_state",
        "//include:state_command",
        "//src/utils:mp_utils",
        "//src/utils:midas_utils",
        "//src/utils:imu_server",
        "//src/utils:imu_tracker",
        "//src/utils:apriltag_utils",
        "//src/utils:fastsam_utils",
        "@linux_opencv//:opencv",
        "@eigen//:eigen3",
    ],
    copts = [
        "-std=c++17",
        "-O3",
    ],
)

cc_library(
    name = "tracking_state",
    srcs = ["tracking_state.cpp"],
    hdrs = ["//include:tracking_state"],
    deps = [
        "//include:tracking_state",
        "//include:state_command",
        "//src/utils:mp_utils",
        "//src/utils:midas_utils",
        "//src/utils:apriltag_utils",
        "//src/utils:fastsam_utils",
        "@linux_opencv//:opencv",
        "@eigen//:eigen3",
    ],
    copts = [
        "-std=c++17",
        "-O3",
    ],
)
