cc_library(
    name = "mp_utils",
    hdrs = ["mp_utils.hpp"],
    include_prefix = "utils",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "midas_utils",
    hdrs = ["midas_utils.hpp"],
    include_prefix = "utils",
    deps = [
        "@libtorch//:torch",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "IMU_server",
    hdrs = ["IMU_server.hpp"],
    include_prefix = "utils",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "IMU_tracker",
    hdrs = ["IMU_tracker.hpp"],
    include_prefix = "utils",
    visibility = ["//visibility:public"],
    deps = ["@eigen//:eigen3"],
)

cc_library(
    name = "apriltag_utils",
    hdrs = ["apriltag_utils.hpp"],
    include_prefix = "utils",
    visibility = ["//visibility:public"],
    deps = [
        "@eigen//:eigen3",
        "@linux_opencv//:opencv",
        "@apriltag//:apriltag",
    ],
)
cc_library(
    name = "fastsam_utils",
    hdrs = ["fastsam_utils.hpp"],
    include_prefix = "utils",
    deps = [
        "@libtorch//:torch",
        "@linux_opencv//:opencv",
    ],
    visibility = ["//visibility:public"],
)
