cc_library(
    name = "mp_utils",
    srcs = ["mp_utils.cpp"],
    deps = [
        "//include/utils:mp_utils",
        "//mediapipe/tasks/cc/vision/hand_landmarker:hand_landmarker",
        "//mediapipe/framework/formats:image",
        "@com_google_absl//absl/log",
    ],
    data = [
        "//mediapipe/models:hand_landmarker.task",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "midas_utils",
    srcs = ["midas_utils.cpp"],
    deps = [
        "//include/utils:midas_utils",
        "@libtorch//:torch",
        "@linux_opencv//:opencv",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "imu_tracker",
    srcs = ["IMU_tracker.cpp"],
    hdrs = ["//include/utils:IMU_tracker"],
    deps = [
        "//include/utils:IMU_tracker", 
        "//include/utils:IMU_server", 
        "@eigen//:eigen3",
    ],
    visibility = ["//visibility:public"],
    copts = ["-std=c++17"], 
)

cc_library(
    name = "imu_server",
    srcs = ["IMU_server.cpp"],
    hdrs = ["//include/utils:IMU_server"],
    deps = [
        ":imu_tracker",
        "@boost//:beast",
        "@com_github_chriskohlhoff_asio//:asio",
        "@com_github_nlohmann_json//:json",
    ],
    visibility = ["//visibility:public"],
    copts = ["-std=c++17"], 
)

cc_library(
    name = "apriltag_utils",
    srcs = ["apriltag_utils.cpp"],
    deps = [
        "//include/utils:apriltag_utils",
        "@linux_opencv//:opencv",
        "@apriltag//:apriltag",
        "@eigen//:eigen3",
        "@com_google_absl//absl/log",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)
cc_library(
    name = "fastsam_utils",
    srcs = ["fastsam_utils.cpp"],
    deps = [
        "//include/utils:fastsam_utils",
        "@libtorch//:torch",
        "@linux_opencv//:opencv",
    ],
    visibility = ["//visibility:public"],
)
